<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:isScrollContainer="true"
    tools:context=".activity.ui.main.PublishFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/water_blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <Button
                    android:id="@+id/publish_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/publish"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/water_blue"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <EditText
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/title"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:hint="@string/publish_hint"
                android:gravity="left|top"
                android:layout_marginTop="20dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </androidx.recyclerview.widget.RecyclerView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_radius_20dp"
                    android:backgroundTint="@color/gray_white"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp">
                    <ImageView
                        android:id="@+id/add_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/add_icon"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/add_image_hint"
                    android:layout_marginStart="30dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_white"
                android:layout_marginVertical="10dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="价格¥"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <EditText
                    android:id="@+id/sell_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@null"
                    android:text="0.00"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/red"
                    android:paddingEnd="10dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_white"
                android:layout_marginVertical="10dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width  ="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="入手价¥"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <EditText
                    android:id="@+id/buy_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@null"
                    android:text="0.00"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/red"
                    android:paddingEnd="10dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_white"
                android:layout_marginVertical="10dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width  ="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="交易方式"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <LinearLayout
                    android:id="@+id/transaction_mode_group_view"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>